--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Install Crystal
         uses: crystal-lang/install-crystal@v1
 
+      - name: Check formatting
+        run: crystal tool format --check
+
       - name: Install dependencies
         run: shards install
 
